--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -12,6 +12,11 @@ TABLE OF CONTENT
 ----------------------------------------------*/
 /* 1. Universal Styles
 ----------------------------------------------*/
+html {
+	height: 100%;
+	width: 100%;
+}
+
 ul {
 	margin: 0;
 	padding: 0;
@@ -139,6 +144,7 @@ section {
 	background-size: cover;
 	color: #d1a1fd;
 	position: relative;
+	height: 45vh;
 }
 
 .templatemo-header-left-overlay {
@@ -785,11 +791,26 @@ hr.gold-hr {
 
 /* 8. Media Queries 
 --------------------------------------*/
+@media screen and (min-width: 1440px) {
+	.templatemo-header-left {
+		height: 41vh;
+	}
+}
+
+@media screen and (min-width: 1920px) {
+	.templatemo-header-left {
+		height: 45vh;
+	}
+}
+
+
+
 @media screen and (max-width: 991px) {
 
 	.templatemo-header-left,
 	.templatemo-header-right {
-		height: 300px;
+		height: 100%;
+		width: 100%;
 	}
 
 	.templatemo-site-name {
@@ -812,6 +833,15 @@ hr.gold-hr {
 
 @media screen and (max-width: 767px) {
 
+	.templatemo-container {
+		margin: 0 auto;
+		overflow: hidden;
+		display: block;
+		max-width: 100%;
+		height: auto;
+	}
+
+
 	.templatemo-block-left,
 	.templatemo-block-right {
 		float: none;
@@ -820,10 +850,12 @@ hr.gold-hr {
 
 	.templatemo-header-left {
 		height: 100%;
+		width: auto;
 	}
 
 	.templatemo-header-right {
-		height: 200px;
+		height: auto;
+		width: auto;
 	}
 
 	.templatemo-header-left-overlay {
